src/objects/Apttus_Config2__InstalledProductsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings for the Installed Products Page in Apttus CPQ</description>
    <fields>
        <fullName>Apttus_Config2__AllowBackdatedTermination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No (By default) - By default user cannot specify a &quot;Cancellation Date&quot; earlier than today.
Yes - User can specify cancellation date earlier than today. This may have additional impact on billing as invoice for the period may have already been generated.</description>
        <label>Allow Backdated Termination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowMassChange__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Mass Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AmendChangeFields__c</fullName>
        <description>Comma separated line item field names whose values can turn an existing asset line into amended asset line.</description>
        <inlineHelpText>Comma separated line item field names whose values can turn an existing asset line into amended asset line.</inlineHelpText>
        <label>Amend Change Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetCurrencyFieldPrecision__c</fullName>
        <description>Holds the number of decimal places for the asset currency fields.
(used by the formatfields function)</description>
        <label>Asset Currency Field Precision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultRenewalPriceList__c</fullName>
        <label>Default Renewal Price List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultRenewalTerm__c</fullName>
        <defaultValue>0</defaultValue>
        <description>When the value is provided use this value as the renewal term for Renewing products.  Number signifies months to renew as the end date.</description>
        <inlineHelpText>When the value is provided use this value as the renewal term for Renewing products.  Number signifies months to renew as the end date.</inlineHelpText>
        <label>Default Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableOneTimeChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow users to make change to one time line item.</description>
        <inlineHelpText>Allow users to make change to one time line item.</inlineHelpText>
        <label>Enable One Time Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FilterFields__c</fullName>
        <description>Asset Line Fields to be displayed on filter.   Works with text fields and End Date.</description>
        <inlineHelpText>Asset Line Fields to be displayed on filter.  Works with text fields and End Date.</inlineHelpText>
        <label>Filter Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to hide co-term end date on renew</description>
        <inlineHelpText>Check to hide co-term end date on renew</inlineHelpText>
        <label>Hide Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxRenewalGroupPerJob__c</fullName>
        <description>Max Renewal Group processed by one batch job. Used to limit the length of batch job to avoid too many running batch jobs.</description>
        <label>Max Renewal Group Per Job</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxRenewalLineItemPerCart__c</fullName>
        <description>Max Renewal Line Item to be processed in one cart. Used to limit the size of product configuration to avoid exceeding CPU and SOQL limits.</description>
        <label>Max Renewal Line Item Per Cart</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxRenewsPerTrip__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Indicates the number of renewals that are processed before a server roundtrip is required.</description>
        <inlineHelpText>To prevent CPU timeout use a smaller number. Default is 20</inlineHelpText>
        <label>Max Renews Per Trip</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewOneRamp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Renew only one ramp line item based on the new term in order of renewal term in asset line item, default renewal term in installed product setting and selling term in asset line item.</description>
        <inlineHelpText>Renew only one ramp line item based on the new term in order of renewal term in asset line item, default renewal term in installed product setting and selling term in asset line item.</inlineHelpText>
        <label>Renew One Ramp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalBusinessObjectType__c</fullName>
        <description>Quote or agreement used in renewal product configuration</description>
        <label>Renewal Business Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalDefaultPriceBook__c</fullName>
        <description>Default price book name used in renewal opportunity</description>
        <label>Renewal Default Price Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalExecutionMode__c</fullName>
        <label>Renewal Execution Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalGroupFields__c</fullName>
        <label>Renewal Group Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalLeadTime__c</fullName>
        <label>Renewal Lead Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowAccountsFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display accounts filter in the installed products page</description>
        <inlineHelpText>Display accounts filter in the installed products page</inlineHelpText>
        <label>Show Accounts Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubmenuActions__c</fullName>
        <description>List of actions to be displayed in the asset action submenu dropdowns separated by commas.</description>
        <inlineHelpText>List of actions to be displayed in the asset action submenu dropdowns separated by commas.</inlineHelpText>
        <label>Submenu Actions</label>
        <type>TextArea</type>
    </fields>
    <label>Installed Products Settings</label>
</CustomObject>